tests/fixtures/invalid/str_bitand_int.py
# Cannot bitwise AND Str and Int
x: str = "hello" & 1
